frontend/test/should_pass/typeof_001.grg
rule r {
	x:Node -e:Edge-> y:Node;

	modify {
		y -f:typeof(e)-> x;
	}
}
