frontend/test/should_fail/ret_010.grg
rule r : (Node, EINT, NINT, Node) {
	x: Node;
	y: Node;
	
	x -e:Edge-> y;

	modify {
		return(x, e, y, a, x);
	}
}

